--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,19 +3,20 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-# 如果支持，请为 MSVC 编译器启用热重载。
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
-endif()
 
 project ("panorama")
 
+
+cmake_minimum_required(VERSION 2.8)
+
+
+set(OpenCV_DIR E:/opencv/build)
+FIND_PACKAGE(OpenCV REQUIRED)
+if(OpenCV_FOUND)
+	message(STUTUS "THE OPENCV LIB IS FOUND!")
+endif()
+include_directories(${OpenCV_INCLUDE_DIR})
+link_directories(${OpenCV_LIBRARY_DIRS})
 # 将源代码添加到此项目的可执行文件。
 add_executable (panorama "panorama.cpp" "panorama.h")
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET panorama PROPERTY CXX_STANDARD 20)
-endif()
-
-# TODO: 如有需要，请添加测试并安装目标。
+target_link_libraries(panorama ${OpenCV_LIBS})
