--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,6 @@ include_directories(${OpenCV_INCLUDE_DIR})
 link_directories(${OpenCV_LIBRARY_DIRS})
 # 将源代码添加到此项目的可执行文件。
 add_executable (panorama "panorama.cpp" "panorama.h")
+add_executable(img_stiched "img_stiched")
 target_link_libraries(panorama ${OpenCV_LIBS})
+target_link_libraries(img_stiched ${OpenCV_LIBS})
